cmake_minimum_required(VERSION 3.24)
PROJECT(test)
SET(TARGETNAME "test")

SET(PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_CXX_STANDARD  20)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)  

ADD_SUBDIRECTORY(thirdPart)


GET_FILENAME_COMPONENT(CURRENT_FOLDER ${CMAKE_CURRENT_SOURCE_DIR} NAME)


set(CMAKE_INCLUDE_CURRENT_DIR ON)


ADD_SUBDIRECTORY(src)