GET_FILENAME_COMPONENT(CURRENT_FOLDER ${CMAKE_CURRENT_SOURCE_DIR} NAME)
PROJECT(${CURRENT_FOLDER})
SET(TARGETNAME ${CURRENT_FOLDER})
SET(PROJECT_DIR ${CMAKE_CURRENT_SOURCE_DIR})


add_custom_target(${TARGETNAME}-config 
    COMMAND COPY 
)


FILE(GLOB_RECURSE CPPS ${PROJECT_DIR}/*.cpp)
FILE(GLOB_RECURSE HEADS ${PROJECT_DIR}/*.h)

source_group("Header" FILES ${HEADS})
source_group("Source" FILES ${CPPS})

add_definitions(-DOSG_LIBRARY_STATIC)

add_executable(${TARGETNAME}
 ${HEADS}
 ${CPPS}
)

TARGET_INCLUDE_DIRECTORIES(${TARGETNAME} 
    INTERFACE ${PROJECT_DIR}
)

target_link_libraries(${TARGETNAME} 
    osg
)

SET_PROPERTY(TARGET ${TARGETNAME}-config PROPERTY FOLDER "config")